@@ -13,7 +13,7 @@ $User->check_user_session();
 // vaidate cookie
 $User->Crypto->csrf_cookie ("validate", "instructions", $_POST['csrf_cookie']) === false ? $Result->show("danger", _("Invalid CSRF cookie"), true) : "";
 // strip script
-$_POST['instructions'] = preg_replace('#<script(.*?)>(.*?)</script>#is', '', $_POST['instructions']);
+$_POST['instructions'] = $User->noxss_html($_POST['instructions']);
 
 ?>
 <div class="normalTable" style="padding: 5px;">
